se corrigen y agregan cosas al proyect